Initial setup of the website
+ django installed
+ configured static and media urls
+ added template
+ started website app

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
-    <link rel="manifest" href="/light-bootstrap-dashboard-pro-react/manifest.json" />
-    <link rel="shortcut icon" href="/light-bootstrap-dashboard-pro-react/favicon.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/light-bootstrap-dashboard-pro-react/apple-icon.png" />
+    <link rel="manifest" href="{% static 'manifest.json' %}" />
+    <link rel="shortcut icon" href="{% static 'favicon.png' %}" />
+    <link rel="apple-touch-icon" sizes="76x76" href="{% static 'apple-icon.png' %}" />
     <link rel="canonical" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-react" />
     <meta name="keywords"
         content="react dashboard, react admin, react bootstrap admin, react bootstrap dashboard, react panel, react bootstrap template, react admin template, react pro, react pro dashboard, react pro bootstrap dashboard, pro admin template" />
@@ -56,8 +56,8 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGat1sgDZ-3y6fFe6HD7QUziVC6jlJNog"></script>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet" />
     <link href="//fonts.googleapis.com/css?family=Roboto:400,700,300" rel="stylesheet" />
-    <link href="{% static '/css/2.bfa94cee.chunk.css' %}" rel="stylesheet">
-    <link href="{% static '/css/main.52135674.chunk.css' %}" rel="stylesheet">
+    <link href="{% static 'css/2.bfa94cee.chunk.css' %}" rel="stylesheet">
+    <link href="{% static 'css/main.52135674.chunk.css' %}" rel="stylesheet">
 </head>
 
 <body class="off-canvas-sidebar"><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NKDMSK6"
