--- a/templates/index.html
+++ b/templates/index.html
@@ -8,51 +8,40 @@
             opacity: 0 !important
         }
     </style>
-    <script>!function (e, n, t, a, c, s, d, i, m) { n.className += " " + t, s.start = 1 * new Date, s.end = d = function () { n.className = n.className.replace(RegExp(" ?" + t), "") }, (e[a] = e[a] || []).hide = s, setTimeout((function () { d(), s.end = null }), 4e3), s.timeout = 4e3 }(window, document.documentElement, "async-hide", "dataLayer", 0, { "GTM-K9BGS8K": !0 })</script>
+    <!-- <script>!function (e, n, t, a, c, s, d, i, m) { n.className += " " + t, s.start = 1 * new Date, s.end = d = function () { n.className = n.className.replace(RegExp(" ?" + t), "") }, (e[a] = e[a] || []).hide = s, setTimeout((function () { d(), s.end = null }), 4e3), s.timeout = 4e3 }(window, document.documentElement, "async-hide", "dataLayer", 0, { "GTM-K9BGS8K": !0 })</script>
     <script>!function (e, a, t, n, g, o, c) { e.GoogleAnalyticsObject = g, e.ga = e.ga || function () { (e.ga.q = e.ga.q || []).push(arguments) }, e.ga.l = 1 * new Date, o = a.createElement(t), c = a.getElementsByTagName(t)[0], o.async = 1, o.src = "https://www.google-analytics.com/analytics.js", c.parentNode.insertBefore(o, c) }(window, document, "script", 0, "ga"), ga("create", "UA-46172202-22", "auto", { allowLinker: !0 }), ga("set", "anonymizeIp", !0), ga("require", "GTM-K9BGS8K"), ga("require", "displayfeatures"), ga("require", "linker"), ga("linker:autoLink", ["2checkout.com", "avangate.com"])</script>
-    <script>!function (e, t, a, n, g) { e[n] = e[n] || [], e[n].push({ "gtm.start": (new Date).getTime(), event: "gtm.js" }); var m = t.getElementsByTagName(a)[0], r = t.createElement(a); r.async = !0, r.src = "https://www.googletagmanager.com/gtm.js?id=GTM-NKDMSK6", m.parentNode.insertBefore(r, m) }(window, document, "script", "dataLayer")</script>
+    <script>!function (e, t, a, n, g) { e[n] = e[n] || [], e[n].push({ "gtm.start": (new Date).getTime(), event: "gtm.js" }); var m = t.getElementsByTagName(a)[0], r = t.createElement(a); r.async = !0, r.src = "https://www.googletagmanager.com/gtm.js?id=GTM-NKDMSK6", m.parentNode.insertBefore(r, m) }(window, document, "script", "dataLayer")</script> -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="{% static 'manifest.json' %}" />
     <link rel="shortcut icon" href="{% static 'favicon.png' %}" />
     <link rel="apple-touch-icon" sizes="76x76" href="{% static 'apple-icon.png' %}" />
-    <link rel="canonical" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-react" />
+    <!-- <link rel="canonical" href="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-react" /> -->
     <meta name="keywords"
-        content="react dashboard, react admin, react bootstrap admin, react bootstrap dashboard, react panel, react bootstrap template, react admin template, react pro, react pro dashboard, react pro bootstrap dashboard, pro admin template" />
-    <meta name="description"
-        content="Light Bootstrap Dashboard PRO React is a premium admin dashboard template designed to be beautiful and simple. It is built on top of React Bootstrap and it is fully responsive." />
-    <meta itemprop="name"
-        content="Light Bootstrap Dashboard PRO React by Creative Tim | Premium React Admin Template" />
-    <meta itemprop="description"
-        content="Light Bootstrap Dashboard PRO React is a premium admin dashboard template designed to be beautiful and simple. It is built on top of React Bootstrap and it is fully responsive." />
-    <meta itemprop="image"
-        content="https://s3.amazonaws.com/creativetim_bucket/products/66/thumb/opt_lbdp_react_thumbnail.jpg" />
-    <meta name="twitter:card" content="product" />
+        content="smart city, urban planning, city planning" />
+    <!--<meta name="description" content="Light Bootstrap Dashboard PRO React is a premium admin dashboard template designed to be beautiful and simple. It is built on top of React Bootstrap and it is fully responsive." /> 
+    <meta itemprop="name" content="Light Bootstrap Dashboard PRO React by Creative Tim | Premium React Admin Template" />
+    <meta itemprop="description" content="Light Bootstrap Dashboard PRO React is a premium admin dashboard template designed to be beautiful and simple. It is built on top of React Bootstrap and it is fully responsive." /> 
+    <meta itemprop="image" content="https://s3.amazonaws.com/creativetim_bucket/products/66/thumb/opt_lbdp_react_thumbnail.jpg" /> 
+    <meta name="twitter:card" content="Modeling Smart City" />
     <meta name="twitter:site" content="@creativetim" />
-    <meta name="twitter:title"
-        content="Light Bootstrap Dashboard PRO React by Creative Tim | Premium React Admin Template" />
-    <meta name="twitter:description"
-        content="Light Bootstrap Dashboard PRO React is a premium admin dashboard template designed to be beautiful and simple. It is built on top of React Bootstrap and it is fully responsive." />
+    <meta name="twitter:title" content="Light Bootstrap Dashboard PRO React by Creative Tim | Premium React Admin Template" />
+    <meta name="twitter:description" content="Light Bootstrap Dashboard PRO React is a premium admin dashboard template designed to be beautiful and simple. It is built on top of React Bootstrap and it is fully responsive." />
     <meta name="twitter:creator" content="@creativetim" />
-    <meta name="twitter:image"
-        content="https://s3.amazonaws.com/creativetim_bucket/products/66/thumb/opt_lbdp_react_thumbnail.jpg" />
-    <meta name="twitter:data1"
-        content="Light Bootstrap Dashboard PRO React by Creative Tim | Premium React Admin Template" />
+    <meta name="twitter:image" content="https://s3.amazonaws.com/creativetim_bucket/products/66/thumb/opt_lbdp_react_thumbnail.jpg" />
+    <meta name="twitter:data1" content="Light Bootstrap Dashboard PRO React by Creative Tim | Premium React Admin Template" />
     <meta name="twitter:label1" content="Product Type" />
     <meta name="twitter:data2" content="PRO" />
     <meta name="twitter:label2" content="Price" />
     <meta property="fb:app_id" content="655968634437471" />
-    <meta property="og:title"
-        content="Light Bootstrap Dashboard PRO React by Creative Tim | Premium React Admin Template" />
+    <meta property="og:title" content="Light Bootstrap Dashboard PRO React by Creative Tim | Premium React Admin Template" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://www.creative-tim.com/product/light-bootstrap-dashboard-pro-react" />
-    <meta property="og:image"
-        content="https://s3.amazonaws.com/creativetim_bucket/products/66/thumb/opt_lbdp_react_thumbnail.jpg" />
-    <meta property="og:description"
-        content="Light Bootstrap Dashboard PRO React is a premium admin dashboard template designed to be beautiful and simple. It is built on top of React Bootstrap and it is fully responsive." />
-    <meta property="og:site_name" content="Creative Tim" />
-    <title>Light Bootstrap Dashboard React by Creative Tim | Premium React Admin Template</title>
+    <meta property="og:image" content="https://s3.amazonaws.com/creativetim_bucket/products/66/thumb/opt_lbdp_react_thumbnail.jpg" />
+    <meta property="og:description" content="Light Bootstrap Dashboard PRO React is a premium admin dashboard template designed to be beautiful and simple. It is built on top of React Bootstrap and it is fully responsive." />
+    <meta property="og:site_name" content="Creative Tim" /> --> 
+    <title>Modeling Smart City</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDGat1sgDZ-3y6fFe6HD7QUziVC6jlJNog"></script>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet" />
     <link href="//fonts.googleapis.com/css?family=Roboto:400,700,300" rel="stylesheet" />
